tests/scan/fixtures/validation/negative/clean_npm_credential_legit/index.js
const express = require('express');
const app = express();
app.get('/config', (req, res) => {
  res.json({ token: process.env.API_TOKEN });
});
module.exports = app;
